# DSL

./: .gitignore  API_REFERENCE.md  README.md  SPEC.md  error.py  lexer.py  main.py  requirements.txt  test_lexer.py  tokens.py  功能介绍.md  测试后修改报告.md  项目开发计划书模板V0.01(7).docx
emon/: parser.py
emon-dsl/: CMakeLists.txt  Makefile  README.md  main.py  requirements.txt
emon-dsl/docs/: design.md  development_workflow.md  language_reference.md
emon-dsl/emon/: ast_nodes.py  bpfc_gen.py  error.py  ir.py  lexer.py  loader_gen.py  manifest_gen.py  parser.py  semantic.py  tokens.py
emon-dsl/examples/: file_monitor.emon  full_feature_test.emon  kprobe_monitor.emon  multi_monitor.emon  net_monitor.emon  simple_filter.emon  syscall_count.emon  syscall_latency.emon
emon-dsl/grammar/: EmonLexer.g4  EmonParser.g4  emon.lark
emon-dsl/include/emon/: ast_nodes.h  codegen.h  ir.h  runtime_common.h  semantic.h
emon-dsl/manifest/: tool_manifest.yaml
emon-dsl/scripts/: build.sh  run_example.sh
emon-dsl/src/compiler/: CMakeLists.txt  main.cc
emon-dsl/src/compiler/ast/: CMakeLists.txt  ast_nodes.cc
emon-dsl/src/compiler/codegen/: CMakeLists.txt  ebpfc_generator.cc  libbpf_loader_generator.cc
emon-dsl/src/compiler/ir/: CMakeLists.txt  ir_builder.cc
emon-dsl/src/compiler/lexer/: CMakeLists.txt  emon_lexer.cc  emon_lexer.h
emon-dsl/src/compiler/parser/: CMakeLists.txt  emon_parser.cc  emon_parser.h
emon-dsl/src/compiler/semantic/: CMakeLists.txt  semantic_checker.cc
emon-dsl/src/runtime/: CMakeLists.txt
emon-dsl/src/runtime/loader/: CMakeLists.txt  emon_rt_loader.c
emon-dsl/src/runtime/map/: CMakeLists.txt  emon_rt_map.c
emon-dsl/src/runtime/output/: CMakeLists.txt  emon_rt_output.c
emon-dsl/tests/: CMakeLists.txt  __init__.py  test_codegen.py
emon-dsl/tests/integration/: __init__.py  test_compile_examples.cc  test_examples.py  test_pipeline.py
emon-dsl/tests/unit/: __init__.py  test_ir.py  test_lexer.cc  test_lexer.py  test_main.cc  test_parser.cc  test_parser.py  test_semantic.cc  test_semantic.py
tests/: test_parser.py  test_semantic.py
